@startuml

title __CLASE's Class Diagram__\n

  namespace com.company {
    namespace clase {
      abstract class com.company.clase.Account {
          {abstract} + deposit()
          {abstract} + getBalance()
          {abstract} + transfer()
          {abstract} + withdraw()
      }
    }
  }
  

  namespace com.company {
    namespace clase {
      abstract class com.company.clase.BankAccount {
          # balance : double
          # iban : String
          + BankAccount()
          + BankAccount()
          + getBalance()
      }
    }
  }
  

  namespace com.company {
    namespace clase {
      class com.company.clase.CurrentAccount {
          {static} + MAXCREDIT : double
          + CurrentAccount()
          + CurrentAccount()
          + deposit()
          + transfer()
          + withdraw()
      }
    }
  }
  

  com.company.clase.BankAccount -up-|> com.company.clase.Account
  com.company.clase.CurrentAccount -up-|> com.company.clase.BankAccount


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
